# AFM2

./: .gitignore  README.md  environment.yaml  pyproject.toml
afm2/: constants.py  eval.py  llm_client.py  logger.py  metrics.py  utils.py
afm2/agents/: audio_generation.py  base.py  image_generation.py  mainagent.py  onmi_understanding.py  text_generation.py  text_understanding.py  verifier.py
afm2/configs/: mainagent.yaml
afm2/configs/eval/: audiocaps.yaml  audiocaps_category_info.json  audiocaps_test.csv  audiocaps_train.csv  coco2014.yaml  msrvtt.yaml  msrvtt_category.json  msrvtt_test_metadata.json  vggsound.yaml  vggsound_testset_caption.csv
afm2/configs/missing-info/audiocaps/: audio-0.3.json  audio-0.5.json  audio-0.7.json  image-0.3.json  image-0.5.json  image-0.7.json  text-0.3.json  text-0.5.json  text-0.7.json
afm2/configs/missing-info/coco2014/: image-0.3.json  image-0.5.json  image-0.7.json  text-0.3.json  text-0.5.json  text-0.7.json
afm2/data/: __init__.py  datasets.py  generate_missing.py  tools.py
afm2/knowledges/: general_knowledge_all.json  general_knowledge_claude.json  general_knowledge_ds.json  general_knowledge_o3.json  general_knowledge_qwq.json  sentiment_analysis_all.json  sentiment_analysis_claude.json  sentiment_analysis_ds.json  sentiment_analysis_o3.json  sentiment_analysis_qwq.json
afm2/prompts/: audio_understanding.py  generation.py  image_understanding.py  knowledge_extractor.py  mainagent.py  omni_understanding.py  text_understanding.py  verifier.py
afm2/servers/: generator_config.yaml  generator_server.py  lmm_tools.py
(+18 files in other folders)
