[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "afm2"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = []

[project.optional-dependencies]
build = ["build", "twine"]


[tool.setuptools.packages.find]
include = ["afm2"]
where = ["."]
